--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
     sdk: flutter
   toast: ^0.1.5
   qrcode: ^1.0.4
+  url_launcher: ^5.4.2
   cupertino_icons: ^0.1.2
 
 dev_dependencies:
