--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,14 +22,13 @@ dependencies:
   toast: ^0.1.5
   qrcode: ^1.0.4
   url_launcher: ^5.4.2
+  share: ^0.6.4
   cupertino_icons: ^0.1.2
+  
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  
-
-
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
