--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Fri Apr 24 19:57:58 BRT 2020
-sdk.dir=/home/gumbarros/Android/Sdk
+#Sat Apr 25 09:22:45 BRT 2020
+sdk.dir=C\:\\Users\\Ocean\\AppData\\Local\\Android\\Sdk
