--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
     sdk: flutter
   toast: ^0.1.5
   qrcode: ^1.0.4
+  qr_flutter: ^3.2.0
   url_launcher: ^5.4.2
   share: ^0.6.4
   cupertino_icons: ^0.1.2
