--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,9 +23,9 @@ dependencies:
   qrcode: ^1.0.4
   qr_flutter: ^3.2.0
   url_launcher: ^5.4.2
-  share: ^0.6.4
   cupertino_icons: ^0.1.2
   sqflite: any
+  esys_flutter_share: ^1.0.2
   
 
 dev_dependencies:
