--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,10 +19,13 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
   toast: ^0.1.5
   qrcode: ^1.0.4
   qr_flutter: ^3.2.0
   url_launcher: ^5.4.2
+  get: ^3.15.0
   cupertino_icons: ^0.1.2
   sqflite: any
   esys_flutter_share: ^1.0.2
