--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sat Apr 25 09:22:45 BRT 2020
-sdk.dir=C\:\\Users\\Ocean\\AppData\\Local\\Android\\Sdk
+#Sun Nov 01 09:27:29 BRT 2020
+sdk.dir=/home/gumbarros/Android/Sdk
