--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   qr_flutter: ^3.2.0
   url_launcher: ^5.4.2
   get: ^3.15.0
+  get_storage: ^1.3.2
   cupertino_icons: ^0.1.2
   sqflite: any
   esys_flutter_share: ^1.0.2
