--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dev_dependencies:
 flutter:
   assets:
     - lib/assets/images/
+    - lib/assets/images/github.png
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
