--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,6 @@
 
 # Web related
 lib/generated_plugin_registrant.dart
-
+android/key.properties
 # Exceptions to above rules.
 !/packages/flutter_tools/test/data/dart_dependencies_test/**/.packages
