--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,10 +29,14 @@ dependencies:
   get_storage: ^1.3.2
   cupertino_icons: ^0.1.2
   sqflite: any
+
+
   esys_flutter_share: ^1.0.2
   
 
 dev_dependencies:
+  flutter_launcher_icons: "^0.8.0"
+
   flutter_test:
     sdk: flutter
 
@@ -40,6 +44,12 @@ dev_dependencies:
 # following page: https://dart.dev/tools/pub/pubspec
 
 # The following section is specific to Flutter.
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "lib/assets/images/lab1.png"
+
+
 flutter:
   assets:
     - lib/assets/images/
